@@ -55,7 +55,7 @@
   </extension>
 </addon>
 
-<addon id="plugin.video.ustvnow" version="12.0.1" name="USTVnow" provider-name="Lunatixz">
+<addon id="plugin.video.ustvnow" version="12.0.2" name="USTVnow" provider-name="Lunatixz">
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
     </requires>
