@@ -33,41 +33,39 @@ class Ustvnow:
         html = self._get_html('iphone_ajax', {'tab': 'iphone_playingnow', 
                                               'token': self.token})
         channels = []
-        for channel in re.finditer('id="(content.+?)".+?class="panel".+?title="(.+?)".+?src="' + 
+        for channel in re.finditer('class="panel".+?title="(.+?)".+?src="' +
                                    '(.+?)".+?class="nowplaying_item">(.+?)' +
                                    '<\/td>.+?class="nowplaying_itemdesc".+?' +
                                    '<\/a>(.+?)<\/td>.+?href="(.+?)"',
                                    html, re.DOTALL):
-            id, name, icon, title, plot, url = channel.groups()
-            title = title.replace("&amp;", "&")
-            if name.find('fieldset') != -1:
-                #tmp work around till ustvnow stabilizes changes.
-                name = name.replace('\n','').replace('\t','').replace('\r','').replace('<fieldset> ','').replace('<div class=','').replace('>','').replace('"','').replace(' ','')
-                if not name:
-                    name = ((icon.rsplit('/',1)[1]).replace('.png','')).upper()
-                    name = name.replace('WLYH','CW').replace('WHTM','ABC').replace('WPMT','FOX').replace('WPSU','PBS').replace('WHP','CBS').replace('WGAL','NBC').replace('WHVLLD','MY9').replace('AETV','AE')
-                    name = name.replace('APL','Animal Planet').replace('TOON','Cartoon Network').replace('DSC','Discovery').replace('BRAVO','Bravo').replace('USA','USA Network').replace('SYFY','Syfy').replace('HISTORY','History')
-                    name = name.replace('COMEDY','Comedy Central').replace('FOOD','Food Network').replace('NIK','Nickelodeon').replace('LIFE','Lifetime').replace('SPIKETV','Spike').replace('FNC','Fox News').replace('NGC','National Geographic')
-                try:
-                    if not url.startswith('http'):
-                        now = {'title': title, 'plot': plot.strip()}
-                        # if name == 'CW' or name == 'PBS' or name == 'MY9':
-                            # my_quality = quality
-                        # else: my_quality = quality+1
-                        url = '%s%s%d' % (stream_type, url[4:-1], quality + 1)
-                        aChannel = {'name': name, 'url': url, 
-                                    'icon': icon, 'now': now}
-                                      
-                        if self.premium == False:
-                            if name not in ['CW','ABC','FOX','PBS','CBS','NBC','MY9']:
-                                raise  
-                                
-                        if aChannel in channels:
-                           print 'Duplicate channel found: %s' % (name)
-                        else:
-                           channels.append(aChannel)
-                except:
-                    pass
+            name, icon, title, plot, url = channel.groups()
+            #tmp work around till ustvnow stabilizes changes.
+            name = name.replace('\n','').replace('\t','').replace('\r','').replace('<fieldset> ','').replace('<div class=','').replace('>','').replace('"','').replace(' ','')
+            if not name:
+                name = ((icon.rsplit('/',1)[1]).replace('.png','')).upper()
+                name = name.replace('WLYH','CW').replace('WHTM','ABC').replace('WPMT','FOX').replace('WPSU','PBS').replace('WHP','CBS').replace('WGAL','NBC').replace('WHVLLD','MY9').replace('AETV','AE')
+                name = name.replace('APL','Animal Planet').replace('TOON','Cartoon Network').replace('DSC','Discovery').replace('BRAVO','Bravo').replace('USA','USA Network').replace('SYFY','Syfy').replace('HISTORY','History')
+                name = name.replace('COMEDY','Comedy Central').replace('FOOD','Food Network').replace('NIK','Nickelodeon').replace('LIFE','Lifetime').replace('SPIKETV','Spike').replace('FNC','Fox News').replace('NGC','National Geographic')
+            try:
+                if not url.startswith('http'):
+                    now = {'title': title, 'plot': plot.strip()}
+                    # if name == 'CW' or name == 'PBS' or name == 'MY9':
+                        # my_quality = quality
+                    # else: my_quality = quality+1
+                    url = '%s%s%d' % (stream_type, url[4:-1], quality + 1)
+                    aChannel = {'name': name, 'url': url, 
+                                'icon': icon, 'now': now}
+                                  
+                    if self.premium == False:
+                        if name not in ['CW','ABC','FOX','PBS','CBS','NBC','MY9']:
+                            raise  
+                            
+                    if aChannel in channels:
+                       print 'Duplicate channel found: %s' % (name)
+                    else:
+                       channels.append(aChannel)
+            except:
+                pass
 
         channels.sort()
         return channels        
