@@ -1,3 +1,7 @@
+[B]Version 12.0.2[/B]
+- Force Low quality for non Premium
+- Internal url listitem routing changed from rtmp to static references.
+
 [B]Version 12.0.1[/B]
 - Added channel Sorting
 - Duplicate channel check
